@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Apr 2012; James Rowe <jnrowe@gmail.com>
+  sphinxcontrib-blockdiag-1.0.1.ebuild, sphinxcontrib-blockdiag-1.0.2.ebuild:
+  Switched to python-distutils-ng eclass.
+
 *sphinxcontrib-blockdiag-1.0.2 (20 Mar 2012)
 
   20 Mar 2012; James Rowe <jnrowe@gmail.com>
